# strutils

./: CMakeLists.txt  build_debug_win32.bat  build_debug_win64.bat  build_release_win32.bat  build_release_win64.bat
lib/strutils/: CMakeLists.txt
lib/strutils/include/strutils/: strutils.hpp
lib/strutils/src/: strutils.cpp
tests/: CMakeLists.txt
tests/strutils/: CMakeLists.txt
tests/strutils/src/: strutils.cpp  strutils_contains.cpp  strutils_replace.cpp  strutils_split.cpp  strutils_toupper_tolower.cpp  strutils_trim.cpp
